--- a/index.html
+++ b/index.html
@@ -105,9 +105,18 @@
             alt=""
           />
           <h5>Deploying a Telegram Bot Using AWS Lambda</h5>
-          <p>Platform : GCP </p>
+          <p>Platform : AWS </p>
         </a>
           <!-- end of single project -->
+          <a href="project-detail3.html" class="project">
+            <img
+              src="./assets/projects/p7.jpg"
+              class="img project-img"
+              alt=""
+            />
+            <h5>Deploying a Telegram Bot Using Google Cloud Functions</h5>
+            <p>Platform : GCP </p>
+          </a>
         </div>
       </section>
     </main>
