--- a/project-detail1.html
+++ b/project-detail1.html
@@ -157,6 +157,7 @@
               <p class="single-ingredient">SSH and Secure Connections</p>
               <p class="single-ingredient">Web Server Configuration</p>
               <p class="single-ingredient">Infrastructure as Code (IaC)</p>
+              <p class="single-ingredient">CI/CD</p>
             </div>
             <div>
               <h4>Services</h4>
@@ -164,6 +165,7 @@
               <p class="single-tool">Ubuntu</p>
               <p class="single-tool">Apache</p>
               <p class="single-tool">IAM</p>
+              <p class="single-tool">Github Actions</p>
             </div>
           </article>
         </section>
