--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,8 @@
         <div class="tags-container">
           <h4>Platform</h4>
           <div class="tags-list">
-            <a href="#">AWS (3)</a>
-            <a href="#">Google Cloud (2)</a>
+            <a href="#">AWS (4)</a>
+            <a href="#">Google Cloud (0)</a>
             <a href="#">Azure (0)</a>
             <a href="#">Others (0)</a>
           </div>
@@ -76,30 +76,41 @@
               alt=""
             />
             <h5>Cloud Resume Challenge</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS</p>
           </a>
           <!-- end of single project -->
           <!-- single project -->
-          <a href="project-detail.html" class="project">
+          <a href="project-detail0.html" class="project">
             <img
               src="./assets/projects/p2.png"
               class="img project-img"
               alt=""
             />
             <h5>Static Website Hosting</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS </p>
           </a>
           <!-- end of single project -->
           <!-- single project -->
-          <a href="project-detail.html" class="project">
+          <a href="project-detail1.html" class="project">
             <img
               src="./assets/projects/P3.jpg"
               class="img project-img"
               alt=""
             />
             <h5>Deploying a Website on EC2 Instance</h5>
-            <p>Platform : AWS | Difficulty : Easy</p>
+            <p>Platform : AWS </p>
           </a>
+          <!-- end of single project -->
+           <!-- single project -->
+          <a href="project-detail2.html" class="project">
+          <img
+            src="./assets/projects/p7.jpg"
+            class="img project-img"
+            alt=""
+          />
+          <h5>Deploying a Telegram Bot Using AWS Lambda</h5>
+          <p>Platform : GCP </p>
+        </a>
           <!-- end of single project -->
         </div>
         <!-- end of projects list -->
