Added a Readme file and edited content

--- a/project-detail0.html
+++ b/project-detail0.html
@@ -49,7 +49,7 @@
           <article class="project-info">
             <h2>Deploying a Static Website Using S3 Bucket</h2>
             <p>
-              In this project, I hosted a static website using an AWS S3 bucket. This method eliminates the need to manage a server, allowing you to focus on your website's content and design. By using Infrastructure as Code (IaC) with AWS SAM (Serverless Application Model), we will streamline the setup and deployment process, making it easier to implement a CI/CD pipeline. This approach is ideal for maintaining efficiency and adhering to industry standards.
+              In this project, I hosted a static website using an AWS S3 bucket. This method eliminates the need to manage a server, allowing you to focus on your website's content and design. I streamline the setup and deployment process by making use of Github actions for the CI/CD pipeline. This approach is ideal for maintaining efficiency and adhering to industry standards.
             </p>
             <div class="project-icons">
               <article>
@@ -132,11 +132,13 @@
               <h4>Concepts</h4>
               <p class="single-ingredient">IAM</p>
               <p class="single-ingredient">Bucket Policy and Permissions</p>
+              <p class="single-ingredient">CI/CD</p>
             </div>
             <div>
               <h4>Services</h4>
               <p class="single-tool">S3 Bucket</p>
               <p class="single-tool">IAM</p>
+              <p class="single-tool">Github Actions</p>
             </div>
           </article>
         </section>
