Added new project

--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
           <h4>Platform</h4>
           <div class="tags-list">
             <a href="#">AWS (4)</a>
-            <a href="#">Google Cloud (0)</a>
+            <a href="#">Google Cloud (1)</a>
             <a href="#">Azure (0)</a>
             <a href="#">Others (0)</a>
           </div>
@@ -90,6 +90,15 @@
             <p>Platform : AWS </p>
           </a>
           <!-- end of single project -->
+          <a href="project-detail3.html" class="project">
+            <img
+              src="./assets/projects/p7.jpg"
+              class="img project-img"
+              alt=""
+            />
+            <h5>Deploying a Telegram Bot Using Google Cloud Functions</h5>
+            <p>Platform : GCP </p>
+          </a>
           <!-- single project -->
           <a href="project-detail1.html" class="project">
             <img
@@ -101,6 +110,7 @@
             <p>Platform : AWS </p>
           </a>
           <!-- end of single project -->
+         
            <!-- single project -->
           <a href="project-detail2.html" class="project">
           <img
@@ -109,7 +119,7 @@
             alt=""
           />
           <h5>Deploying a Telegram Bot Using AWS Lambda</h5>
-          <p>Platform : GCP </p>
+          <p>Platform : AWS </p>
         </a>
           <!-- end of single project -->
         </div>
