Made edits to writeups

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="page">
       <section class="about-page">
         <article>
-          <h2>Hey I'm John Twasam and my aim is to empower individual and companies to leverage the power of Cloud Computing</h2>
+          <h2>Hey I'm John Twasam and my aim is to empower individuals and companies to leverage the power of Cloud Computing</h2>
           <p>
           I am certified as a GCP Associate Cloud Engineer and Cloud Architect, and I also hold AWS Cloud Practitioner certification
           </p>
