--- a/project-detail0.html
+++ b/project-detail0.html
@@ -59,7 +59,7 @@
               </article>
               <article>
                 <i class="fas fa-globe"></i>
-                <h5>Telegram Bot API Link</h5>
+                <h5>Portfolio Link</h5>
                 <p><a href="http://johntwasam.xyz.s3-website-eu-west-1.amazonaws.com" target="_blank">Portfolio Link</a></p>
               </article>
             </div>
