--- a/project-detail1.html
+++ b/project-detail1.html
@@ -60,7 +60,7 @@
               <article>
                 <i class="fas fa-globe"></i>
                 <h5>Project Link</h5>
-                <p><a href="http://34.254.186.119" target="_blank">EC2 Instance Link</a></p>
+                <p><a href="http://34.254.186.119" target="_blank">Portfolio Link</a></p>
               </article>
             </div>
             <p class="project-tags">
