--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,15 @@
             <p>Platform : AWS</p>
           </a>
           <!-- end of single project -->
+          <a href="project-detail3.html" class="project">
+            <img
+              src="./assets/projects/p7.jpg"
+              class="img project-img"
+              alt=""
+            />
+            <h5>Deploying a Telegram Bot Using Google Cloud Functions</h5>
+            <p>Platform : GCP </p>
+          </a>
           <!-- single project -->
           <a href="project-detail0.html" class="project">
             <img
