Refactor code and made edits to projects

--- a/project-detail.html
+++ b/project-detail.html
@@ -55,7 +55,7 @@
               <article>
                 <i class="fab fa-github"></i>
                 <h5>GitHub Link</h5>
-                <p><a href="https://github.com">github.com</a></p>
+                <p><a href="https://github.com/tee-jay7/portfolio-backend">github.com</a></p>
               </article>
               <article>
                 <i class="fas fa-globe"></i>
