--- a/project-detail1.html
+++ b/project-detail1.html
@@ -55,12 +55,12 @@
               <article>
                 <i class="fab fa-github"></i>
                 <h5>Github link</h5>
-                <p><a href="https://github.com/tee-jay7/portfolio-site" target="_blank">github.com</a></p>
+                <p><a href="https://github.com/tee-jay7/ec2_site" target="_blank">github.com</a></p>
               </article>
               <article>
                 <i class="fas fa-globe"></i>
                 <h5>Project Link</h5>
-                <p><a href="http://34.254.186.119" target="_blank">Portfolio Link</a></p>
+                <p><a href="http://ec2-34-254-186-119.eu-west-1.compute.amazonaws.com" target="_blank">Portfolio Link</a></p>
               </article>
             </div>
             <p class="project-tags">
